# reclaim

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  app.css  app.html  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: appx.rs  backup.rs  catalog.rs  commands.rs  detect.rs  drivers.rs  error.rs  hardware.rs  inventory.rs  lib.rs  main.rs  powershell.rs  profiles.rs  registry.rs  services.rs  startup.rs  system.rs
src-tauri/tweaks/: aggressive.toml  ai.toml  annoyances.toml  apps.json  audio.toml  bloatware.toml  developer.toml  edge.toml  explorer.toml  gaming2.toml  gpo.toml  hardening.toml  known_apps.json  network.toml  performance.toml  power.toml  privacy.toml  privacy2.toml  profiles.json  services.toml  sleeplock.toml  updates.toml
src/lib/: icons.ts  icons.tsx  types.ts
src/lib/components/: ActivityPanel.css  ActivityPanel.svelte  ActivityPanel.tsx  AppManager.css  AppManager.svelte  AppManager.tsx  ApplyBar.css  ApplyBar.svelte  ApplyBar.tsx  Apps.tsx  AppsPanel.css  AppsPanel.svelte  AppsPanel.tsx  CommandPalette.css  CommandPalette.svelte  CommandPalette.tsx  ConfirmDialog.svelte  ConfirmDialog.tsx  Dashboard.css  Dashboard.svelte  Dashboard.tsx  DiffDialog.css  DiffDialog.svelte  DiffDialog.tsx  DriversPanel.css  DriversPanel.svelte  DriversPanel.tsx  HardwarePanel.css  Icon.svelte  (+39 more)
src/routes/: +page.svelte
(+5 files in other folders)
